--- a/app.html
+++ b/app.html
@@ -60,7 +60,7 @@
         </header>
         
         <div class="flex justify-end gap-2">
-             <button id="save-app-btn" class="text-sm bg-green-600 text-white font-semibold py-1 px-3 rounded-md hover:bg-green-700">Save Work (Download App)</button>
+             <button id="save-app-btn" class="text-sm bg-green-600 text-white font-semibold py-1 px-3 rounded-md hover:bg-green-700">Save Work</button>
              <!-- NEW: Clear All Button -->
              <button id="clear-all-btn" class="text-sm bg-red-100 text-red-700 font-semibold py-1 px-3 rounded-md hover:bg-red-200">Clear All Notes</button>
         </div>
